--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A snapshot of my testing libraries education",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/DaniilZinoviev/education__testing/issues"
   },
-  "homepage": "https://github.com/DaniilZinoviev/education__testing#readme"
+  "homepage": "https://github.com/DaniilZinoviev/education__testing#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
