--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "babel-jest": "^26.6.3",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
@@ -27,10 +28,15 @@
     "jest": "^26.6.3",
     "mini-css-extract-plugin": "^1.3.1",
     "node-sass": "^5.0.0",
+    "react-test-renderer": "^17.0.1",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0"
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   }
 }
